catalytic_table_to_struct/example/src/non_compiling_code/non_complete_insert.stderr
error: proc macro panicked
 --> src/non_compiling_code/non_complete_insert.rs:6:5
  |
6 |     query!("insert into test_table (b, c, d, a) values (2, 3, 4, 5)");
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Insert query is missing values
