catalytic_table_to_struct/example/src/non_compiling_code/non_complete_insert.rs
use catalytic_macro::query;

fn main() -> Result<(), scylla::frame::value::SerializeValuesError> {
    let a = 1;

    query!("insert into test_table (b, c, d, a) values (2, 3, 4, 5)");

    Ok(())
}